# DroidBackup

./: CMakeLists.txt  README.md  version.hpp.in
.github/: FUNDING.yml
.github/workflows/: build_cmake.yml
include/: abackup.hpp
src/: CMakeLists.txt  main.cpp
